--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,25 @@
+html {
+    margin: 0;
+    height: 100%;
+}
+.App {
+    background: rgb(42,22,50);
+    background: linear-gradient(58deg, rgba(42,22,50,1) 0%, rgba(109,138,201,1) 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .top {
     display: block;
     width: 100%;
-    height: 400px;
+    height: 30vh;
 }
 .bottom {
-    width: 100%;
-    height: 400px;
+    display: block;
+    width: 95%;
+    height: 70vh;
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
 }
 .form {
     display: flex;
