--- a/src/App.css
+++ b/src/App.css
@@ -15,14 +15,38 @@ html {
     height: 30vh;
 }
 .bottom {
-    display: block;
-    width: 95%;
+    display: flex;
+    width: 100%;
     height: 70vh;
     background-color: rgb(255, 255, 255);
-    border-radius: 20px;
+    border-radius: 30px 30px 0 0;
 }
 .form {
     display: flex;
     flex-direction: column;
-    width: 200px;
+    width: 20%;
+    height: 20%;
+    margin-top: 2%;
+    margin-left: 2%;
+    padding: 1%;
+    border-radius: 30px;
+    color: white;
+    align-items: center;
+    justify-content: space-between;
+    background: rgb(42,22,50);
+    background: linear-gradient(58deg, rgba(42,22,50,1) 0%, rgba(109,138,201,1) 100%);
+}
+.form input {
+    width: 50%;
+}
+.form button {
+    width: 15%;
+}
+.holdingsTable {
+    width: 80%;
+    padding-top: 2%;
+    padding-left: 2%;
+}
+.holdingsTable table {
+    width: 80%;
 }
