--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,14 @@ html {
     align-items: center;
 }
 .top {
-    display: block;
+    display: flex;
+    align-items: center;
+    font-size: 80px;
     width: 100%;
     height: 30vh;
+}
+.display {
+    color: white;
 }
 .bottom {
     display: flex;
