--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@ html {
     color: black;
 }
 .holdingsTable {
-    width: 80%;
+    width: 60%;
     padding-top: 2%;
     padding-left: 2%;
 }
@@ -58,6 +58,10 @@ html {
     width: 80%;
     text-align: left;
     border-collapse: collapse;
+}
+.holdingsTable table thead tr {
+    border-bottom: 1px solid black;
+
 }
 .holdingsTable table tbody tr {
     border-bottom: 1px solid black;
