--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,11 @@ html {
     height: 100%;
 }
 .App {
-    background: rgb(42,22,50);
-    background: linear-gradient(58deg, rgba(42,22,50,1) 0%, rgba(109,138,201,1) 100%);
+    background: rgb(74, 149, 202);
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: 'Roboto', sans-serif;
 }
 .top {
     display: flex;
@@ -30,7 +30,7 @@ html {
     display: flex;
     flex-direction: column;
     width: 20%;
-    height: auto;
+    height: 20%;
     margin-top: 2%;
     margin-left: 2%;
     padding: 1%;
@@ -38,16 +38,20 @@ html {
     color: white;
     justify-content: space-between;
     align-items: center;
-    background: rgb(42,22,50);
-    background: linear-gradient(58deg, rgba(42,22,50,1) 0%, rgba(109,138,201,1) 100%);
+    background: rgb(74, 149, 202);
 }
 .form input {
     width: 50%;
+    border-radius: 5px;
+    border-style: none;
 }
 .form button {
     width: 15%;
     background-color: white;
     color: black;
+    border-radius: 5px;
+
+    border-style: none;
 }
 .holdingsTable {
     width: 60%;
