--- a/src/App.css
+++ b/src/App.css
@@ -29,14 +29,14 @@ html {
 .form {
     display: flex;
     flex-direction: column;
-    width: 20%;
-    height: 20%;
-    margin-top: 2%;
+    width: auto;
+    height: auto;
+    margin-top: auto;
+    margin-bottom: auto;
     margin-left: 2%;
     padding: 1%;
     border-radius: 20px;
     color: white;
-    justify-content: space-between;
     align-items: center;
     background: rgb(74, 149, 202);
 }
@@ -44,13 +44,13 @@ html {
     width: 50%;
     border-radius: 5px;
     border-style: none;
+    margin: 5%;
 }
 .form button {
-    width: 15%;
+    width: auto;
     background-color: white;
     color: black;
     border-radius: 5px;
-
     border-style: none;
 }
 .holdingsTable {
