--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ html {
     flex-direction: column;
     width: auto;
     height: auto;
-    margin-top: auto;
+    margin-top: 2%;
     margin-bottom: auto;
     margin-left: 2%;
     padding: 1%;
@@ -39,6 +39,7 @@ html {
     color: white;
     align-items: center;
     background: rgb(74, 149, 202);
+    font-size: 25px;
 }
 .form input {
     width: 50%;
@@ -57,6 +58,7 @@ html {
     width: 60%;
     padding-top: 2%;
     padding-left: 2%;
+    font-size: 25px;
 }
 .holdingsTable table {
     width: 80%;
