--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@ html {
     height: 100%;
 }
 .App {
-    background: rgb(74, 149, 202);
-    display: flex;
+    background: rgb(201,219,226);
+    background: linear-gradient(0deg, rgba(201,219,226,1) 0%, rgba(129,189,231,1) 100%);
     flex-direction: column;
     align-items: center;
     font-family: 'Roboto', sans-serif;
@@ -41,8 +41,8 @@ html {
     border-radius: 20px;
     color: white;
     align-items: center;
-    background: rgb(74, 149, 202);
-    font-size: 25px;
+    background: rgb(201,219,226);
+    background: linear-gradient(0deg, rgba(201,219,226,1) 0%, rgba(129,189,231,1) 100%);
 }
 .form input {
     width: 50%;
@@ -80,10 +80,14 @@ html {
     display: flex;
     flex-direction: column;
 }
+.ticker {
+    font-weight: bold;
+}
 .info {
     font-size: 20px;
     padding: 2px;
 }
 .val {
     text-align: right;
+    font-weight: bold;
 }
