--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,9 @@ html {
     background-color: rgb(255, 255, 255);
     border-radius: 20px 20px 0 0;
 }
+.right {
+    text-align: right;
+}
 .form {
     display: flex;
     flex-direction: column;
@@ -75,6 +78,9 @@ html {
 .holdingsTable table tbody tr {
     border-bottom: 1px solid black;
 
+}
+.holdingsTable table tbody tr:hover {
+    background-color: rgb(218, 227, 230);
 }
 .stock-row {
     display: flex;
