--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,8 @@ html {
 }
 .top {
     display: flex;
-    align-items: center;
+    align-items: left;
+    padding-left: 10%;
     font-size: 80px;
     width: 100%;
     height: 30vh;
