--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,10 @@ html {
 }
 .form {
     display: none;
+
+}
+.formShow {
+    display: flex;
     flex-direction: column;
     width: auto;
     height: auto;
